Added abstracts for Thomas, Andrew, and Jan

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -59,7 +59,8 @@
             which is UTC+11:00.
             </p>
             <p>
-            Click on talk title links to view the corresponding abstract (if available).
+            Click on talk title links to view the corresponding abstract.
+            <!-- Click on talk title links to view the corresponding abstract (if available). -->
             </p>
 
             
@@ -93,15 +94,30 @@
                     <td style="text-align:right">9:00am</td>
                     <td>Thomas Prellberg</td>
                     <td><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract1')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract1');toggle('abstract991')">
+                                Staircase polygons revisited: an open question by Richard Brak
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract1" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract1" style="display:none;">
+                        Nearly 30 years ago I was working on enumeration of
+                        lattice polygons, such as staircase polygons, with
+                        respect to area and perimeter. For staircase polygons,
+                        there is a generating function solution in terms of
+                        q-deformed Bessel functions, which differentiates with
+                        respect to perimeter steps in the horizontal and
+                        vertical direction. While very elegant, this solution
+                        does not reflect that the answer must be symmetric
+                        under exchange of horizontal and vertical steps, which
+                        bothered Richard. In this talk I revisit this problem
+                        and present such a generating function. This involves a
+                        foray into q-deformed algebraic functional equations, a
+                        subject I first encountered when working with Richard
+                        and Tony.
+                        </abstract></td>
+                </tr>
                 <tr>
                     <td style="text-align:right">9:30am</td>
                     <td>Stuart Whittington</td>
@@ -192,15 +208,20 @@
                     <td style="text-align:right">12:00pm</td>
                     <td>Andrew Rechnitzer</td>
                     <td><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract5')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract5');toggle('abstract995')">
+                                Trials and tribulations of preserving topology
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract5" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract5" style="display:none;"> 
+                                Monte Carlo simulations are a big part of understanding the statistical properties of knots. Unfortunately, if one wishes to study curves of fixed knot types then there are very few methods available.
+                                <br />
+                                <br />
+                                This work, with Nick Beaton and Nathan Clisby, is an attempt to adapt existing algorithms to polygons in R3 of fixed topology. It is very much a work in progress, but I will report on our  attempts at trying to coerce the (very fast) pivot algorithm to respect topology.
+                        </abstract></td>
+                </tr>
                 <tr bgcolor="#E0E0E0">
                     <td  style="text-align:right">12:30pm</td>
                     <td colspan="2"> Lunch</td>
@@ -316,15 +337,23 @@
                     <td style="text-align:right">4:30pm</td>
                     <td>Jan de Gier</td>
                     <td><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract12')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract12');toggle('abstract9912')">
+                                The one-transit model
+
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract12" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract12" style="display:none;"> 
+                        I will discuss joint work with Richard regarding a Dyck
+                        path type model with contact energies above and below a
+                        horizontal line. The statistical mechanical partition
+                        function of this model gives the stationary
+                        distribution of the asymmetric exclusion process with
+                        open boundaries
+                    </abstract></td>
+                </tr>
                 <tr bgcolor="#E0E0E0">
                     <td  style="text-align:right">5:00pm</td>
                     <td colspan="2"> Closing remarks</td>
@@ -367,14 +396,29 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract1')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract1');toggle('abstract991')">
+                                Staircase polygons revisited: an open question by Richard Brak
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td  colspan="2"><abstract id="abstract1" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td  colspan="2"><abstract id="abstract991" style="display:none;">
+                        Nearly 30 years ago I was working on enumeration of
+                        lattice polygons, such as staircase polygons, with
+                        respect to area and perimeter. For staircase polygons,
+                        there is a generating function solution in terms of
+                        q-deformed Bessel functions, which differentiates with
+                        respect to perimeter steps in the horizontal and
+                        vertical direction. While very elegant, this solution
+                        does not reflect that the answer must be symmetric
+                        under exchange of horizontal and vertical steps, which
+                        bothered Richard. In this talk I revisit this problem
+                        and present such a generating function. This involves a
+                        foray into q-deformed algebraic functional equations, a
+                        subject I first encountered when working with Richard
+                        and Tony.
+                        </abstract></td>
+                </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr>
                     <td style="text-align:right">9:30am</td>
@@ -477,14 +521,19 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract5')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract5');toggle('abstract995')">
+                                Trials and tribulations of preserving topology
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td  colspan="2"><abstract id="abstract5" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td  colspan="2"><abstract id="abstract995" style="display:none;"> 
+                                Monte Carlo simulations are a big part of understanding the statistical properties of knots. Unfortunately, if one wishes to study curves of fixed knot types then there are very few methods available.
+                                <br />
+                                <br />
+                                This work, with Nick Beaton and Nathan Clisby, is an attempt to adapt existing algorithms to polygons in R3 of fixed topology. It is very much a work in progress, but I will report on our  attempts at trying to coerce the (very fast) pivot algorithm to respect topology.
+                        </abstract></td>
+                </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr bgcolor="#E0E0E0">
                     <td  style="text-align:right">12:30pm</td>
@@ -620,14 +669,22 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract12')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract12');toggle('abstract9912')">
+                                The one-transit model
+
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td  colspan="2"><abstract id="abstract12" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td  colspan="2"><abstract id="abstract9912" style="display:none;"> 
+                        I will discuss joint work with Richard regarding a Dyck
+                        path type model with contact energies above and below a
+                        horizontal line. The statistical mechanical partition
+                        function of this model gives the stationary
+                        distribution of the asymmetric exclusion process with
+                        open boundaries
+                    </abstract></td>
+                </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr bgcolor="#E0E0E0">
                     <td  style="text-align:right">5:00pm</td>
