Minor update to wording

--- a/brak/index.html
+++ b/brak/index.html
@@ -101,13 +101,23 @@
             The provisional <a href="program">program</a> is now available.
             </p>
             <p>
-            Prior to the date of the symposium we will add some <a
-                href="photos">photos</a> and
-            biographical details to celebrate Richard, his research contributions,
-            and his contributions to the lattice statistical mechanics
-            community and the mathematical physics community (ANZAMP) more
-            broadly.
+            Please visit the 
+            <a href="photos">photos</a> page to see Richard in action.
             </p>
+            <p>
+            During this symposium we will celebrate Richard, his research
+            contributions, and his contributions to the lattice statistical
+            mechanics community and the mathematical physics community (ANZAMP)
+            more broadly.
+            </p>
+            <!-- <p> -->
+            <!-- Prior to the date of the symposium we will add some --> 
+            <!-- <a href="photos">photos</a> and -->
+            <!-- biographical details to celebrate Richard, his research contributions, -->
+            <!-- and his contributions to the lattice statistical mechanics -->
+            <!-- community and the mathematical physics community (ANZAMP) more -->
+            <!-- broadly. -->
+            <!-- </p> -->
             <p>
             Richard was deeply interested in archaeology, and over many years painstakingly
             produced an accurate 3d digital reconstruction of the 
