--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -42,6 +42,11 @@
             Please also contact Nathan if the attribution for any photos needs
             to be added or corrected.
             </p>
+            Special thanks to Rachel Brak, Jesper Jacobsen, Thomas Prellberg,
+            Chris Soteros, and Stu Whittington for tracking down photos and
+            sharing them.
+            <p>
+            </p>
             <p>
             Click on any of the photos below to load the full-sized image.
             </p>
