Minor update to wording

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -42,7 +42,8 @@
             Please also contact Nathan if the attribution for any photos needs
             to be added or corrected.
             </p>
-            Special thanks to Rachel Brak, Jesper Jacobsen, Thomas Prellberg,
+            Special thanks to Rachel Brak, Jesper Jacobsen, Buks Janse van
+            Rensburg, Thomas Prellberg,
             Chris Soteros, and Stu Whittington for tracking down photos and
             sharing them.
             <p>
