Added program booklet

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -63,7 +63,12 @@
             <!-- Click on talk title links to view the corresponding abstract (if available). -->
             </p>
             <p>
-            A pdf version of the program can be downloaded <a href="Program_RichardBrakMemorialSymposium.pdf">here</a>.
+            A pdf version of the program can be downloaded 
+            <a href="Program_RichardBrakMemorialSymposium.pdf">here</a> 
+            as a
+            standard pdf file, and 
+            <a href="Program_RichardBrakMemorialSymposium_booklet.pdf">here</a> 
+            in booklet form for printing.
             </p>
 
             
