--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -49,6 +49,9 @@
             <p>
             </p>
             <p>
+            More photos will be added soon.
+            </p>
+            <p>
             Click on any of the photos below to load the full-sized image.
             </p>
             <!-- Saving this to remember table format. -->
