--- a/brak/index.html
+++ b/brak/index.html
@@ -98,7 +98,7 @@
                 href="register">registration</a> page to register.
             </p>
             <p>
-            The provisional <a href="program">program</a> is now available.
+            The <a href="program">program</a> is now available.
             </p>
             <p>
             Please visit the 
@@ -136,6 +136,14 @@
                 Meeting</a> will be held at Monash University
             from 9-11 February, 2022.
             </p>
+            <p>
+            The symposium venue is the Evan Williams Theatre, in the Peter Hall
+            Building of the University of Melbourne. Visitors should access the
+            Peter Hall Building via the western entrance as shown on the map
+            below. The red marker shows the western entrance, and the purple
+            marker shows the approximate location of the Evan Williams Theatre.
+            </p>
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1bXPXq7I9hf1T9j7ieqna2mIM-V8sOAS0&ehbc=2E312F" width="640" height="480"></iframe>
 
 <br/>
 <h3>Organisers</h3>
