added map details

--- a/brak/index.html
+++ b/brak/index.html
@@ -140,8 +140,10 @@
             The symposium venue is the Evan Williams Theatre, in the Peter Hall
             Building of the University of Melbourne. Visitors should access the
             Peter Hall Building via the western entrance as shown on the map
-            below. The red marker shows the western entrance, and the purple
-            marker shows the approximate location of the Evan Williams Theatre.
+            below. The <span style="color:red;">red marker shows the western
+                entrance</span>, and the 
+            <span style="color:BlueViolet;">purple marker shows the Evan Williams
+                Theatre</span>.
             </p>
 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1bXPXq7I9hf1T9j7ieqna2mIM-V8sOAS0&ehbc=2E312F" width="640" height="480"></iframe>
 
