added images from Thomas and Rachel. Created smaller images to preserve bandwidth.

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -84,8 +84,39 @@
 
 
                         <figure>
+                        <a href="../images/1993_Richard_Brak_Poster.jpg">
+                        <img src="../images/1993_Richard_Brak_Poster_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard and Rachel Brak circa 1992-1994. Photo taken by Thomas Prellberg.
+                        </figcaption>
+                        </figure>
+                        <figure>
+                        <a href="../images/1993_Richard_Brak_Picnic.jpg">
+                        <img src="../images/1993_Richard_Brak_Picnic_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard Brak circa 1992-1994. Photo taken by Thomas Prellberg.
+                        </figcaption>
+                        </figure>
+                        <figure>
+                        <a href="../images/1993_Richard_Brak_Guinness.jpg">
+                        <img src="../images/1993_Richard_Brak_Guinness_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard Brak circa 1992-1994. Photo taken by Thomas Prellberg.
+                        </figcaption>
+                        </figure>
+
+
+
+
+                        <figure>
                         <a href="../images/1995a.jpg">
-                        <img src="../images/1995a.jpg" alt="Group photo including Richard Brak"
+                        <img src="../images/1995a_small.jpg" alt="Group photo including Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -94,7 +125,7 @@
                         </figure>
                         <figure>
                         <a href="../images/1995b.jpg">
-                        <img src="../images/1995b.jpg" alt="Group photo including Richard Brak"
+                        <img src="../images/1995b_small.jpg" alt="Group photo including Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -103,7 +134,7 @@
                         </figure>
                         <figure>
                         <a href="../images/1995c.jpg">
-                        <img src="../images/1995c.jpg" alt="Group photo including Richard Brak"
+                        <img src="../images/1995c_small.jpg" alt="Group photo including Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -112,7 +143,7 @@
                         </figure>
                         <figure>
                         <a href="../images/stu046.jpg">
-                        <img src="../images/stu046.jpg" alt="Richard Brak"
+                        <img src="../images/stu046_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -123,7 +154,7 @@
                         </figure>
                         <figure>
                         <a href="../images/RichardBrak2001_P0000394.jpg">
-                        <img src="../images/RichardBrak2001_P0000394.jpg" alt="Richard Brak"
+                        <img src="../images/RichardBrak2001_P0000394_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -134,7 +165,7 @@
 
                         <figure>
                         <a href="../images/RichardBrakBuksJanseVanRensburgAleksOwczarek2001.jpg">
-                        <img src="../images/RichardBrakBuksJanseVanRensburgAleksOwczarek2001.jpg" alt="Richard Brak"
+                        <img src="../images/RichardBrakBuksJanseVanRensburgAleksOwczarek2001_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -145,7 +176,7 @@
 
                         <figure>
                         <a href="../images/dewittstucms01a005_1.jpg">
-                        <img src="../images/dewittstucms01a005_1.jpg" alt="Richard Brak"
+                        <img src="../images/dewittstucms01a005_1_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -167,7 +198,7 @@
 
                         <figure>
                         <a href="../images/2003_f1010004_ByChrisSoteros.jpg">
-                        <img src="../images/2003_f1010004_ByChrisSoteros.jpg" alt="Group photo including Richard Brak"
+                        <img src="../images/2003_f1010004_ByChrisSoteros_small.jpg" alt="Group photo including Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -179,7 +210,7 @@
 
                         <figure>
                         <a href="../images/2003_f1010024_ByChrisSoteros.jpg">
-                        <img src="../images/2003_f1010024_ByChrisSoteros.jpg" alt="Group photo including Richard Brak"
+                        <img src="../images/2003_f1010024_ByChrisSoteros_small.jpg" alt="Group photo including Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -200,7 +231,7 @@
 
                         <figure>
                         <a href="../images/2005_GroupPhoto1_FromThomasPrellberg.jpg">
-                        <img src="../images/2005_GroupPhoto1_FromThomasPrellberg.jpg" alt="Richard Brak"
+                        <img src="../images/2005_GroupPhoto1_FromThomasPrellberg_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -211,7 +242,7 @@
 
                         <figure>
                         <a href="../images/2005_RichardBrakDunkIsland_FromThomasPrellberg.jpg">
-                        <img src="../images/2005_RichardBrakDunkIsland_FromThomasPrellberg.jpg" alt="Richard Brak"
+                        <img src="../images/2005_RichardBrakDunkIsland_FromThomasPrellberg_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -223,7 +254,7 @@
 
                         <figure>
                         <a href="../images/2005_DunkIsland_RichardBrak.jpg">
-                        <img src="../images/2005_DunkIsland_RichardBrak.jpg" alt="Richard Brak"
+                        <img src="../images/2005_DunkIsland_RichardBrak_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -234,7 +265,7 @@
 
                         <figure>
                         <a href="../images/2005_GroupPhoto2_FromThomasPrellberg.jpg">
-                        <img src="../images/2005_GroupPhoto2_FromThomasPrellberg.jpg" alt="Group photo at Guttmannfest, Dunk Island."
+                        <img src="../images/2005_GroupPhoto2_FromThomasPrellberg_small.jpg" alt="Group photo at Guttmannfest, Dunk Island."
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -245,7 +276,7 @@
 
                         <figure>
                         <a href="../images/2005_DunkIsland_ChrisSoteros_RichardBrak.jpg">
-                        <img src="../images/2005_DunkIsland_ChrisSoteros_RichardBrak.jpg" alt="Richard Brak"
+                        <img src="../images/2005_DunkIsland_ChrisSoteros_RichardBrak_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -253,6 +284,89 @@
                         Janse van Rensburg.
                         </figcaption>
                         </figure>
+
+                        <figure>
+                        <a href="../images/RichardAndRachelInNaples.jpg">
+                        <img src="../images/RichardAndRachelInNaples_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard and Rachel in Naples. Photo provided by Rachel Brak.
+                        </figcaption>
+                        </figure>
+
+                        <figure>
+                        <a href="../images/RichardAndRachelInIceland.jpg">
+                        <img src="../images/RichardAndRachelInIceland_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard and Rachel in Iceland. Photo provided by Rachel Brak.
+                        </figcaption>
+                        </figure>
+
+                        <figure>
+                        <a href="../images/PuffinInIcelandByRichardBrak.jpg">
+                        <img src="../images/PuffinInIcelandByRichardBrak_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        A puffin in iceland. Photo taken by Richard Brak.
+                        </figcaption>
+                        </figure>
+
+                        <figure>
+                        <a href="../images/RichardAndRachelInMaltaAtMegalithicTemple.jpg">
+                        <img src="../images/RichardAndRachelInMaltaAtMegalithicTemple_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard and Rachel in Malta at the Tarxien megalithic temple complex. Photo provided by Rachel Brak.
+                        </figcaption>
+                        </figure>
+                        <figure>
+
+                        <figure>
+                        <a href="../images/RichardAtopStromboliVolcano.jpg">
+                        <img src="../images/RichardAtopStromboliVolcano_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard atop Stromboli volcano. Photo provided by Rachel Brak.
+                        </figcaption>
+                        </figure>
+                        <figure>
+
+                        <figure>
+                        <a href="../images/SilverBrandFallsGrampiansByRichardBrak.jpg">
+                        <img src="../images/SilverBrandFallsGrampiansByRichardBrak_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Silver Brand Falls, Grampians, by Richard Brak.
+                        </figcaption>
+                        </figure>
+
+                        <figure>
+                        <a href="../images/SilentStreetGrampiansByRichardBrak.jpg">
+                        <img src="../images/SilentStreetGrampiansByRichardBrak_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Silent Street, Grampians, by Richard Brak.
+                        </figcaption>
+                        </figure>
+
+                       <figure>
+                        <a href="../images/KnossosInnerThroneRoomReconstruction.jpg">
+                        <img src="../images/KnossosInnerThroneRoomReconstruction_small.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Reconstruction of the inner throne room of the Palace at Knossos, by Richard Brak. See more renderings at Richard's <a href "http://findingstones.com/">Knossos Project</a>.
+                        </figcaption>
+                        </figure>
+
 
             <br />
             <br />
