--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -48,9 +48,9 @@
             sharing them.
             <p>
             </p>
-            <p>
-            More photos will be added soon.
-            </p>
+            <!-- <p> -->
+            <!-- More photos will be added soon. -->
+            <!-- </p> -->
             <p>
             Click on any of the photos below to load the full-sized image.
             </p>
