fixed knossos link

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -363,7 +363,7 @@
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-                        Reconstruction of the inner throne room of the Palace at Knossos, by Richard Brak. See more renderings at Richard's <a href "http://findingstones.com/">Knossos Project</a>.
+                        Reconstruction of the inner throne room of the Palace at Knossos, by Richard Brak. See more renderings at Richard's <a href="http://findingstones.com/">Knossos Project</a>.
                         </figcaption>
                         </figure>
 
