--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -42,10 +42,10 @@
                         <a href="../">Homepage</a>
                     </h3>
                 </div>
-            <p>
-            Note that the schedule below is provisional, and may be adjusted to accommodate speaker preferences.
-            The program will be progressively updated as talk titles and abstracts are received.
-            </p>
+            <!-- <p> -->
+            <!-- Note that the schedule below is provisional, and may be adjusted to accommodate speaker preferences. -->
+            <!-- The program will be progressively updated as talk titles and abstracts are received. -->
+            <!-- </p> -->
             <p>
             <b>Date</b>: Monday, 7 February, 2022.
             </p>
