replaced low res small photos with originals, this time deleted files

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -143,7 +143,7 @@
                         </figure>
                         <figure>
                         <a href="../images/stu046.jpg">
-                        <img src="../images/stu046_small.jpg" alt="Richard Brak"
+                        <img src="../images/stu046.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -176,7 +176,7 @@
 
                         <figure>
                         <a href="../images/dewittstucms01a005_1.jpg">
-                        <img src="../images/dewittstucms01a005_1_small.jpg" alt="Richard Brak"
+                        <img src="../images/dewittstucms01a005_1.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
