Canadam 2015 images added

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -286,6 +286,36 @@
                         </figure>
 
                         <figure>
+                        <a href="../images/2015_Canadam_2615.jpg.jpg">
+                        <img src="../images/2015_Canadam_2615.jpg.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard Brak at Canadam 2015, photo by Chris Soteros.
+                        </figcaption>
+                        </figure>
+
+                        <figure>
+                        <a href="../images/2015_Canadam_2617.jpg.jpg">
+                        <img src="../images/2015_Canadam_2617.jpg.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard Brak at Canadam 2015, photo by Chris Soteros.
+                        </figcaption>
+                        </figure>
+
+                        <figure>
+                        <a href="../images/2015_Canadam_2683.jpg.jpg">
+                        <img src="../images/2015_Canadam_2683.jpg.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard Brak at Canadam 2015, photo by Chris Soteros.
+                        </figcaption>
+                        </figure>
+
+                        <figure>
                         <a href="../images/RichardAndRachelInNaples.jpg">
                         <img src="../images/RichardAndRachelInNaples_small.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
