--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -286,8 +286,8 @@
                         </figure>
 
                         <figure>
-                        <a href="../images/2015_Canadam_2615.jpg.jpg">
-                        <img src="../images/2015_Canadam_2615.jpg.jpg" alt="Richard Brak"
+                        <a href="../images/2015_Canadam_2615.jpg">
+                        <img src="../images/2015_Canadam_2615.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -296,8 +296,8 @@
                         </figure>
 
                         <figure>
-                        <a href="../images/2015_Canadam_2617.jpg.jpg">
-                        <img src="../images/2015_Canadam_2617.jpg.jpg" alt="Richard Brak"
+                        <a href="../images/2015_Canadam_2617.jpg">
+                        <img src="../images/2015_Canadam_2617.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
@@ -306,8 +306,8 @@
                         </figure>
 
                         <figure>
-                        <a href="../images/2015_Canadam_2683.jpg.jpg">
-                        <img src="../images/2015_Canadam_2683.jpg.jpg" alt="Richard Brak"
+                        <a href="../images/2015_Canadam_2683.jpg">
+                        <img src="../images/2015_Canadam_2683.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
