--- a/brak/index.html
+++ b/brak/index.html
@@ -145,7 +145,10 @@
             <span style="color:BlueViolet;">purple marker shows the Evan Williams
                 Theatre</span>.
             </p>
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1bXPXq7I9hf1T9j7ieqna2mIM-V8sOAS0&ehbc=2E312F" width="640" height="480"></iframe>
+            <img src="./images/MapOfEvanWilliamsTheatre.png" alt="Evan Williams
+            Theatre directions"
+            width="80%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+<!-- <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1bXPXq7I9hf1T9j7ieqna2mIM-V8sOAS0&ehbc=2E312F" width="640" height="480"></iframe> -->
 
 <br/>
 <h3>Organisers</h3>
